Fix toc-header spacing in page-header
Adds gap necessary for languageSelect.
Align with menu-search-wrapper.

--- a/packages/typo3-docs-theme/assets/sass/layout/_header.scss
+++ b/packages/typo3-docs-theme/assets/sass/layout/_header.scss
@@ -14,12 +14,14 @@ header {
     .toc-header {
         display: flex;
         justify-content: space-between;
+        gap: 0.4rem;
         padding-left: calc(#{$spacer} / 1.5);
 
         .toc-title {
             display: flex;
             justify-content: center;
             flex-direction: column;
+            padding-right: 0.6rem;
         }
 
         a.toc-title-project {
