--- a/packages/typo3-docs-theme/resources/public/css/theme.css
+++ b/packages/typo3-docs-theme/resources/public/css/theme.css
@@ -26273,12 +26273,14 @@ header {
 header .toc-header {
   display: flex;
   justify-content: space-between;
+  gap: 0.4rem;
   padding-left: calc(1rem / 1.5);
 }
 header .toc-header .toc-title {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-right: 0.6rem;
 }
 header .toc-header a.toc-title-project {
   display: block;
